interpreter/examples/good/simple/while.dl
{
    int x.
    while x <= 10 do {
        print x;
        x = x++
    }
}
