interpreter/examples/bad/interpreter/zero_division.dl
// zero division error

{
    int x.
    x = 1 / x
}
